# YGN-SAGE

./: .gitattributes  .gitignore  ARCHITECTURE.md  Audit2.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.mcp  GEMINI.md  LICENSE  README.md  SYNTHESESTRAT.md  YGN-SAGE-AUDIT_1.md  debug_h96.py  latest_discovery.json  list_notebooks.py  mkdocs.yml  notebooklm_agent_sync.py  notebooklm_deep_audit.py  notebooklm_query_all.py  notebooklm_query_marl.py  notebooklm_sync_codebase.py  notebooklm_sync_sota.py  run_benchmarks.sh  test_codex_fix.py  verify_install.py
sage-core/: .gitignore  Cargo.toml  README.md  interface.wit
sage-core/config/: cards.toml
sage-core/fuzz/: Cargo.toml
sage-core/fuzz/fuzz_targets/: fuzz_smt_parser.rs
sage-core/models/: .gitignore  README.md  download_model.py  export_classifier.py
sage-core/plugins/cpython-runner/: .gitignore  README.md  app.py
sage-core/plugins/python-runner/: Cargo.toml  build.sh
sage-core/plugins/python-runner/src/: lib.rs
sage-core/plugins/python-runner/wit/: world.wit
sage-core/src/: README.md  agent.rs  hardware.rs  lib.rs  memory.rs  pool.rs  simd_sort.rs  sort_utils.rs  types.rs
sage-core/src/memory/: README.md  arrow_tier.rs  embedder.rs  entity_graph.rs  event.rs  mod.rs  paging.rs  rag_cache.rs  relevance_gate.rs  smmu.rs
sage-core/src/routing/: bandit.rs  features.rs  knn.rs  mod.rs  model_assigner.rs  model_card.rs  model_registry.rs  persistence.rs  quality.rs  router.rs  smmu_bridge.rs  system_router.rs
sage-core/src/sandbox/: README.md  ebpf.rs  mod.rs  snap_bpf.c  subprocess.rs  tool_executor.rs  validator.rs  wasm.rs  z3_validator.rs
sage-core/src/topology/: cma_me.rs  engine.rs  executor.rs  llm_synthesis.rs  map_elites.rs  mcts.rs  mod.rs  mutations.rs  pyo3_wrappers.rs  smmu_bridge.rs  templates.rs  topology_graph.rs  verifier.rs
sage-core/src/verification/: ltl.rs  mod.rs  smt.rs
sage-core/tests/: README.md  test_bandit.rs  test_embedder.rs  test_engine.rs  test_executor.rs  test_llm_synthesis.rs  test_map_elites.rs  test_memory.rs  test_model_card.rs  test_model_registry.rs  test_mutations.rs  test_persistence.rs  test_pool.rs  test_pyo3_topology.rs  test_security_vectors.rs  test_simd.rs  test_smmu.rs  test_smmu_bridge.rs  test_system_router.rs  test_topology.rs  test_topology_smmu_bridge.rs  test_types.rs  test_verifier.rs
sage-discover/: README.md  agency_bench.py  benchmark_engine.py  cybergym_benchmark_suite.py  evaluate_codebase.py  example_run.py  fast_proof.py  latest_discovery.json  long_discovery_run.py  mcp_gateway.py  official_benchmark_suite.py  pyproject.toml  test_hardware.py
sage-discover/docs/plans/: latest_discovery.json
sage-discover/src/discover/: README.md  __init__.py  __main__.py  curator.py  discovery.py  ingestion.py  knowledge.py  migration.py  model_watcher.py  pipeline.py  researcher.py  workflow.py
sage-discover/tests/: test_curator.py  test_discover.py  test_discovery.py  test_ingestion.py  test_migration.py  test_model_watcher.py  test_pipeline.py
sage-python/: README.md  pyproject.toml
sage-python/config/: README.md  cards.toml  heterogeneous_eval.json  model_profiles.toml  models.toml  routing_exemplars.npz  routing_ground_truth.json
sage-python/data/: .gitignore
sage-python/docs/architecture/: rpc_schema_evolution.md
sage-python/docs/plans/: agent_stream.jsonl  lockfree_mpsc_queue.md
sage-python/models/: training_summary.json
sage-python/scripts/: analyze_topologybench.py  build_routing_exemplars.py  collect_quality_triples.py  collect_shadow_traces.py  eval_deberta_zeroshot.py  evolution_statistical_proof.py  fix_benchmark_artifacts.py  merge_topologybench.py  run_topologybench.py  run_topologybench_reasoning.py  train_quality_model.py
sage-python/src/sage/: README.md  __init__.py  agent.py  agent_loop.py  agent_loop_context.py  agent_pool.py  boot.py  checkpoint.py  consistency.py  constants.py  evidence.py  execution_decision.py  orchestrator.py  pipeline.py  pipeline_stages.py  quality_estimator.py  resilience.py  topology_controller.py
sage-python/src/sage/agents/: README.md  __init__.py  factory.py  handoff.py  loop_agent.py  parallel.py  sequential.py
sage-python/src/sage/analytics/: __init__.py  scaling.py
sage-python/src/sage/bench/: README.md  __init__.py  __main__.py  ablation.py  baseline_comparison.py  eval_protocol.py  evalplus_bench.py  evolution_ablation.py  heterogeneous_bench.py  humaneval.py  memory_ablation.py  routing.py  routing_downstream.py  routing_ground_truth.py  routing_quality.py  runner.py  sprint3_evidence.py  swebench_bench.py  truth_pack.py
sage-python/src/sage/contracts/: README.md  __init__.py  cost_tracker.py  dag.py  executor.py  planner.py  policy.py  repair.py  task_node.py  verification.py  z3_verify.py
sage-python/src/sage/events/: README.md  (+2 more)
sage-python/tests/: README.md  test_a2a_server.py  test_ablation.py  test_ablation_routing.py  test_ablation_stats.py  test_adaptive_router.py  test_agent.py  test_agent_factory.py  test_agent_loop.py  test_agent_loop_phases.py  test_agent_pool.py  test_agent_tool.py  test_agents_composition.py  test_assigner_parity.py  test_bandit_routing.py  test_bandit_seeding.py  test_baseline_bench.py  test_baseline_comparison.py  test_bench.py  test_bench_metadata.py  test_boot.py  test_boot_embedder.py  test_boot_refresh.py  test_boot_sandbox_warning.py  test_boot_topology.py  test_boot_warnings.py  test_bugfixes.py  test_capabilities.py  test_capability_matrix.py  test_capability_self_test.py  test_causal_memory.py  test_cleanup.py  test_compressor_smmu.py  test_config_loader.py  test_consistency_score.py  test_constrained_decoding.py  test_cost_enforcement.py  test_cost_tracker.py  test_dag_executor.py  test_dag_features.py  (+126 more)
sage-python/tests/integration/: conftest.py  test_guardrail_pipeline.py  test_memory_pipeline.py  test_tool_creation.py
sage-router/: pyproject.toml
sage-router/src/sage_router/: __init__.py  adaptive_router.py  knn_router.py  metacognition.py  quality_estimator.py  structural_features.py
sage-router/tests/: test_router.py
(+421 files in other folders)
