[package]
name = "sage-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "sage_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "process", "time"] }
ulid = { version = "1", features = ["serde"] }
thiserror = "2"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33.0"
raw-cpuid = "11.2"
arrow = { version = "55.0", features = ["ffi"] }
arrow-array = "55.0"
pyo3-arrow = "0.10.0"
# wasmtime v36 LTS (supported until Aug 2027).
# cranelift feature EXCLUDED on Windows: causes STATUS_STACK_BUFFER_OVERRUN
# during MSVC compilation. Use pre-compiled modules + Module::deserialize().
# On Linux CI, add "cranelift" feature for JIT compilation.
wasmtime = { version = "36.0", optional = true, default-features = false, features = ["runtime", "component-model", "std"] }
wasmtime-wasi = { version = "36.0", optional = true, default-features = false }
# solana_rbpf removed: its build script cross-compiles for BPF target,
# causing CI failure on Ubuntu even when optional. Re-add in Phase 2.
# solana_rbpf = { version = "0.8.5", optional = true }
numpy = "0.25"
petgraph = "0.6.4"
# ort uses load-dynamic: loads onnxruntime DLL at runtime (via ORT_DYLIB_PATH or pip onnxruntime).
# This avoids static linking errors (LNK1120) on Windows MSVC that occurred with copy-dylibs.
ort = { version = "2.0.0-rc.12", optional = true, features = ["load-dynamic"] }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["progressbar", "fancy-regex"] }
ndarray = { version = "0.16", optional = true }
tree-sitter = { version = "0.26", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
process-wrap = { version = "9", optional = true, features = ["tokio1"] }
oxiz = { version = "0.1", optional = true }
tracing = "0.1"
toml = "0.8"
rand = "0.9"
rusqlite = { version = "0.33", features = ["bundled"], optional = true }
[features]
default = []
sandbox = ["wasmtime", "dep:wasmtime-wasi"]
# On Linux CI, use sandbox + cranelift for JIT compilation.
# On Windows, sandbox alone uses pre-compiled modules only.
cranelift = ["wasmtime/cranelift"]
onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray"]
tool-executor = ["dep:tree-sitter", "dep:tree-sitter-python", "dep:process-wrap"]
cognitive = ["dep:rusqlite"]
smt = ["dep:oxiz"]

[lints]
workspace = true
