[project]
name = "sage-discover"
version = "0.1.0"
description = "YGN-SAGE Flagship Research & Discovery Agent"
requires-python = ">=3.12"
dependencies = [
    "ygn-sage>=0.1.0",
    "arxiv>=2.1",
    "semanticscholar>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discover"]
