[project]
name = "ygn-sage"
version = "0.1.0"
description = "YGN-SAGE: Self-Adaptive Generation Engine"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "rich>=13",
    "anyio>=4",
    "neo4j>=5.17",
    "qdrant-client>=1.8",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.52"]
openai = ["openai>=1.82"]
google = ["google-genai>=1"]
all = ["ygn-sage[anthropic,openai,google]"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "ruff>=0.11",
    "mypy>=1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
