[project]
name = "ygn-sage"
version = "0.1.0"
description = "YGN-SAGE: Self-Adaptive Generation Engine"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "rich>=13",
    "anyio>=4",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
google = ["google-genai>=1"]
arrow = ["pyarrow>=18"]
z3 = ["z3-solver>=4.13"]
ui = ["fastapi>=0.115", "uvicorn>=0.34"]
all = ["ygn-sage[google,arrow,z3,ui]"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "ruff>=0.11",
    "mypy>=1.15",
    "ulid-py>=1.1",
    "pyarrow>=18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
