[project]
name = "ygn-sage"
version = "0.1.0"
description = "YGN-SAGE: Self-Adaptive Generation Engine"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "rich>=13",
    "anyio>=4",
    "aiosqlite>=0.20",
    "numpy>=1.26",
]

[project.optional-dependencies]
google = ["google-genai>=1.20,<2"]
openai = ["openai>=1.50,<2"]
arrow = ["pyarrow>=18"]
z3 = ["z3-solver>=4.13"]
embeddings = ["sentence-transformers>=2.2"]
ui = ["fastapi>=0.115", "uvicorn>=0.34"]
bench = ["evalplus>=0.3.1"]
mcp = ["mcp>=1.7"]
a2a = ["a2a-sdk[http-server]>=0.3"]
protocols = ["ygn-sage[mcp,a2a]"]
all = ["ygn-sage[google,openai,arrow,z3,embeddings,ui,bench,mcp,a2a]"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "ruff>=0.11",
    "mypy>=1.15",
    "ulid-py>=1.1",
    "pyarrow>=18",
    "hypothesis>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring a real LLM (GOOGLE_API_KEY)",
    "integration: integration tests requiring optional protocol dependencies",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

# ── Per-module suppressions (incremental: enable per-module as errors are fixed) ──
# These modules have known type errors that were masked by `|| true` in CI.
# Each module is listed here so the suppression is explicit and auditable.
# TODO: remove each entry as its errors are fixed in follow-up tasks.

[[tool.mypy.overrides]]
module = [
    "sage.agent",
    "sage.agents.factory",
    "sage.bench.routing_quality",
    "sage.bench.sprint3_evidence",
    "sage.boot",
    "sage.events.bus",
    "sage.evolution.engine",
    "sage.evolution.llm_mutator",
    "sage.guardrails.builtin",
    "sage.llm.codex",
    "sage.llm.google",
    "sage.memory.embedder",
    "sage.memory.memory_agent",
    "sage.memory.remote_rag",
    "sage.memory.smmu_context",
    "sage.memory.working",
    "sage.orchestrator",
    "sage.protocols.serve",
    "sage.routing.shadow",
    "sage.sandbox.manager",
    "sage.strategy.engine",
    "sage.strategy.knn_router",
    "sage.strategy.metacognition",
    "sage.strategy.solvers",
    "sage.tools.agent_mgmt",
    "sage.tools.meta",
    "sage.topology.kg_rlvr",
]
ignore_errors = true
